--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,9 @@
 {
-  "name": "boxing-idle-game-backend",
+  "name": "club-ring-game-backend",
   "version": "1.0.0",
-  "description": "Boxing Idle Game - Production-ready backend",
+  "description": "Club Ring Game - Official Telegram Boxing Idle Game Backend",
+  "author": "Club Ring Game",
+  "license": "MIT",
   "scripts": {
     "build": "nest build",
     "start": "nest start",
@@ -17,6 +19,14 @@
     "test:cov": "jest --coverage",
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
+  "keywords": [
+    "boxing",
+    "idle-game",
+    "telegram",
+    "nestjs",
+    "backend",
+    "club-ring"
+  ],
   "dependencies": {
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.0.0",
